# Algoritmos-y-Estructuras-de-Datos-II

Algoritmos 2/Iteradores/ejercitacion_iteradores_5/src/: algoritmos.hpp
Algoritmos 2/Iteradores/ejercitacion_iteradores_5/tests/: algo_tests.cpp
Algoritmos 2/Memoria Dinamica/ejercitacion_punteros (1)/ejercitacion_punteros/src/: ConexionJugador.h  SistemaDeMensajes.cpp  SistemaDeMensajes.h
Algoritmos 2/Memoria Dinamica/ejercitacion_punteros (1)/ejercitacion_punteros/tests/: sdm_tests.cpp
Algoritmos 2/Templates/alumnos/: CMakeLists.txt
Algoritmos 2/Templates/alumnos/src/: Diccionario.hpp  Templates.hpp
Algoritmos 2/Templates/alumnos/tests/: test_diccionario.cpp
Laboratorios/Clase1/ejercitacion_uso_clases/: CMakeLists.txt
Laboratorios/Clase1/ejercitacion_uso_clases/src/: funciones.cpp
Laboratorios/Clase1/ejercitacion_uso_clases/tests/: tests_algobot.cpp  tests_funciones.cpp
Laboratorios/Clase10/taller_sorting/: algorithms.py  list.py  list_algorithms.py  test.py
Laboratorios/Clase2/ejercitacion_definicion_clases/: CMakeLists.txt
Laboratorios/Clase2/ejercitacion_definicion_clases/src/: Fecha.cpp  Horario.cpp
Laboratorios/Clase2/ejercitacion_definicion_clases/tests/: test_fecha.cpp  test_horario.cpp  test_horario_main.cpp
Laboratorios/Clase3/02_templates/alumnos/: CMakeLists.txt
Laboratorios/Clase3/02_templates/alumnos/src/: Algobot.cpp  Diccionario.h  Fecha.cpp
Laboratorios/Clase3/02_templates/alumnos/tests/: ej1_periodo.cpp  ej2_periodo_y_fecha.cpp  ej3_funciones.cpp  test_algobot.cpp  test_diccionario.cpp
Laboratorios/Clase3/02_templates/alumnos/tests/google-test/: Makefile  cmake_install.cmake
Laboratorios/Clase5/03_templates/alumnos/tests/: test_diccionario.cpp
Laboratorios/Clase7/taller_hashing/: CMakeLists.txt
Laboratorios/Clase7/taller_hashing/data/: Makefile  README.md  gauss.txt  generar_datos.py  graficar_datos.py  libretas.txt  uniforme.txt
Laboratorios/Clase7/taller_hashing/src/: DiccHash.h  DiccHash.hpp
Laboratorios/Clase7/taller_hashing/tests/: tests_dicc_hash.cpp
Laboratorios/Clase8/ejercitacion_heap/src/: ColaPrior.h  ColaPrior.hpp
Taller arbol binario de busqueda/: Conjunto.h  Conjunto.hpp
Taller lista doblemente enlazada/: Lista.h
Taller tries/: string_map.h
Trabajo Practico Integrador/: CMakeLists.txt  README.md
Trabajo Practico Integrador/datos/: conjunto1.txt  conjunto2.txt  estaciones.txt  inter_mitre_retiro.txt  interurbano.txt  interurbano_large.txt  lineas.txt  personas.txt  proj_select_estacion_cantidad.txt  select_estacion_constitucion.txt  select_linea_roca.txt  select_linea_roca_temperley.txt  trenes.txt  union_temperley_sanIsidro.txt  viajes.txt  viajes_corto.txt  viajes_corto_cantidad.txt  viajes_corto_estacion.txt
Trabajo Practico Integrador/src/: BaseDeDatos.cpp  BaseDeDatos.h  Consulta.cpp  Consulta.h  Driver.cpp  Driver.h  Registro.cpp  Registro.h  Tabla.cpp  Tabla.h  Tipos.h
Trabajo Practico Integrador/src/modulos_basicos/: linear_set_iterators.h  string_map.h  string_map.hpp
Trabajo Practico Integrador/tests/: driver_test.cpp  linear_map_tests.cpp  linear_set_tests.cpp  string_map_tests.cpp  test_baseDeDatos.cpp  test_registro.cpp  test_tabla.cpp
taller_conjunto_sobre_ABB/: Explicacion
taller_conjunto_sobre_ABB/tests/: conjunto-tests.cpp
taller_lista_enlazada/src/: Lista.hpp
taller_lista_enlazada/tests/: lista_tests.cpp
taller_trie/src/: string_map.hpp
taller_trie/tests/: string_map_tests.cpp
